--- a/moodyTrainer.ui
+++ b/moodyTrainer.ui
@@ -1858,7 +1858,7 @@ QPushButton:pressed {
             </widget>
            </item>
            <item row="5" column="2" rowspan="4" colspan="2">
-            <widget class="QLabel" name="label_11">
+            <widget class="QLabel" name="emotionOutputLabel">
              <property name="font">
               <font>
                <family>Tahoma</family>
@@ -1916,7 +1916,7 @@ QPushButton:pressed {
             </widget>
            </item>
            <item row="3" column="2" rowspan="2" colspan="2">
-            <widget class="QLabel" name="label_10">
+            <widget class="QLabel" name="quizCheckLabel">
              <property name="font">
               <font>
                <family>Tahoma</family>
